File Name Changes

--- a/TargetWaitTime.ipynb
+++ b/TargetWaitTime.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rolling Horizon Scheduler Model\n",
+    "## Target Wait Time Scheduler\n",
     "\n",
-    "##### Sets\n",
+    "#### Sets\n",
     "Define the sets used in the model:\n",
     "- $I$: Range of surgeries.\n",
     "- $J$: Range of days.\n",
@@ -30,15 +30,19 @@
     "#### Constraints\n",
     "Define the constraints:\n",
     "- **Constraint 1: Surgery can only be done once**\n",
-    "  - $\\sum_{jk} (X_{ijk}) = 1$ for all $i \\in I$\n",
+    "  - $\\sum_{jk} (X_{ijk}) \\leq 1$ for all $i \\in I$\n",
     "- **Constraint 2: Room capacity**\n",
     "  - $C_{jk} \\geq \\sum_{i \\in I} (X_{ijk} \\cdot D_i)$ for all $j$ in $J$, $k$ in $K$\n",
-    "- **Big M Constraint**: $SWT_{i} - T_{i} \\leq M \\cdot Y_{ijk}$ for all $i \\in I$, $j$ in $J$, $k$ in $K$\n",
+    "- **Constraint 3: Set $SWT_{i}$**\n",
+    "  - $SWT_{i} = \\sum_{jk} (j \\cdot X_{ijk}) \\cdot (1 + AD_i)$ for all $i \\in I$\n",
+    "- **Constraint 4: Indicator for $SWT_{i} > T_{i}$**\n",
+    "  - $SWT_{i} - T_{i} \\leq M \\cdot Y_{i}$ for all $i \\in I$\n",
+    "- **Constraint 5: Enforce $SWT_{i} > T_{i}$**\n",
+    "  - $SWT_{i} - T_{i} \\leq M \\cdot Y_{i}$ for all $i \\in I$\n",
     "\n",
     "#### Objective Function\n",
     "Define the objective function:\n",
-    "- **Minimize** $\\text{Minimize} \\sum_{i,j,k} \\left( \\text{max}\\left(0, X_{ijk} \\cdot (SWT_i - T_i)\\right) + \\beta \\cdot SWT_i \\right)$\n",
-    "\n"
+    "- **Minimize** $\\text{Minimize} \\sum_{i,j,k} \\left( \\text{max}\\left(0, X_{ijk} \\cdot (SWT_i - T_i)\\right) + \\beta \\cdot SWT_i + \\delta \\cdot {penalty\\_unscheduled}\\right) $\n"
    ]
   },
   {
