--- a/TargetWaitTime.ipynb
+++ b/TargetWaitTime.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,18 +100,15 @@
     "        model.addConstr(gp.quicksum(X[i, j, k] * D[i] for i in I) <= C[j, k], name=f\"Capacity{j}_{k}\")\n",
     "\n",
     "#Constraints for variables: \n",
-    "# Add constraint to set SWT[i] equal to the scheduled wait time plus the admitted date\n",
+    "\n",
+    "# Constraint 3: Add constraint to set SWT[i] equal to the scheduled wait time plus the admitted date\n",
     "for i in I:\n",
     "    model.addConstr(SWT[i] == gp.quicksum(j * X[i, j, k] for j in J for k in K) * (1 + AD[i]),\n",
     "                    name=f\"SWT_Constraint_{i}\")\n",
     "    \n",
-    "# Define a new binary decision variable to indicate whether SWT[i] > T[i]\n",
+    "# Constraint Define a new binary decision variable to indicate whether SWT[i] > T[i]\n",
     "for i in I:\n",
     "    model.addConstr(SWT[i] - T[i] <= M * Y[i], name=f\"Constraint_SWT_T_{i}\")\n",
-    "\n",
-    "# Add constraints to enforce SWT[i] > T[i]\n",
-    "for i in I:\n",
-    "    model.addConstr(SWT[i] - T[i] <= M * Y[i])\n",
     "\n",
     "# Define the penalty term for surgeries not scheduled at least once\n",
     "penalty_unscheduled = gp.quicksum((1 - gp.quicksum(X[i, j, k] for j in J for k in K)) for i in I)\n",
@@ -124,13 +121,13 @@
     "\n",
     "# Combine the penalty term and cost term to form the objective function\n",
     "beta = 0.1\n",
-    "delta = 99999\n",
+    "delta = 99999999\n",
     "model.setObjective(penalty_term + (beta * cost_term) + delta * penalty_unscheduled, GRB.MINIMIZE)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,120 +139,106 @@
       "CPU model: 13th Gen Intel(R) Core(TM) i7-1355U, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 10 physical cores, 12 logical processors, using up to 12 threads\n",
       "\n",
-      "Optimize a model with 168 rows, 936 columns and 2772 nonzeros\n",
-      "Model fingerprint: 0xe439ccfb\n",
+      "Optimize a model with 132 rows, 936 columns and 2700 nonzeros\n",
+      "Model fingerprint: 0x0daddb2f\n",
       "Model has 36 quadratic objective terms\n",
       "Variable types: 36 continuous, 900 integer (900 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+99]\n",
-      "  Objective range  [1e-01, 1e+05]\n",
+      "  Objective range  [1e-01, 1e+08]\n",
       "  QObjective range [5e+01, 5e+01]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 3e+00]\n",
+      "  RHS range        [1e+00, 1e+01]\n",
       "Warning: Model contains large matrix coefficient range\n",
       "         Consider reformulating model or setting NumericFocus parameter\n",
       "         to avoid numerical issues.\n",
-      "Found heuristic solution: objective 3599964.0000\n",
-      "Found heuristic solution: objective 3598884.0000\n",
-      "Presolve removed 36 rows and 0 columns\n",
-      "Presolve time: 0.00s\n",
-      "Presolved: 168 rows, 972 columns, 2808 nonzeros\n",
-      "Variable types: 0 continuous, 972 integer (900 binary)\n",
+      "Found heuristic solution: objective 3.600000e+09\n",
+      "Found heuristic solution: objective 3.599998e+09\n",
+      "Presolve removed 6 rows and 6 columns\n",
+      "Presolve time: 0.01s\n",
+      "Presolved: 156 rows, 960 columns, 2778 nonzeros\n",
+      "Variable types: 0 continuous, 960 integer (894 binary)\n",
+      "Found heuristic solution: objective 2.999998e+09\n",
       "\n",
-      "Root relaxation: objective 1.199243e+06, 384 iterations, 0.00 seconds (0.00 work units)\n",
+      "Root relaxation: objective 1.199998e+09, 323 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0 1199242.80    0   94 3598884.00 1199242.80  66.7%     -    0s\n",
-      "H    0     0                    1700806.9000 1199242.80  29.5%     -    0s\n",
-      "H    0     0                    1201510.8000 1199242.80  0.19%     -    0s\n",
-      "     0     0 1200863.20    0   51 1201510.80 1200863.20  0.05%     -    0s\n",
+      "     0     0 1.2000e+09    0   91 3.0000e+09 1.2000e+09  60.0%     -    0s\n",
+      "H    0     0                    1.300000e+09 1.2000e+09  7.69%     -    0s\n",
+      "H    0     0                    1.200000e+09 1.2000e+09  0.00%     -    0s\n",
       "\n",
-      "Cutting planes:\n",
-      "  Gomory: 22\n",
-      "  Cover: 27\n",
-      "  Implied bound: 19\n",
-      "  Clique: 4\n",
-      "  MIR: 24\n",
-      "  StrongCG: 20\n",
-      "  Flow cover: 42\n",
-      "  GUB cover: 15\n",
-      "  Zero half: 17\n",
-      "  RLT: 70\n",
-      "  Relax-and-lift: 11\n",
-      "  PSD: 4\n",
-      "\n",
-      "Explored 1 nodes (1445 simplex iterations) in 0.17 seconds (0.07 work units)\n",
+      "Explored 1 nodes (369 simplex iterations) in 0.05 seconds (0.02 work units)\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
-      "Solution count 4: 1.20151e+06 1.70081e+06 3.59888e+06 3.59996e+06 \n",
+      "Solution count 5: 1.2e+09 1.3e+09 3e+09 ... 3.6e+09\n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 1.201510800000e+06, best bound 1.201510800000e+06, gap 0.0000%\n",
+      "Best objective 1.200000430800e+09, best bound 1.199998162800e+09, gap 0.0002%\n",
       "Schedule Results:\n",
-      "Surgery S1 Tonsillectomy is scheduled on day 5 in room 0\n",
-      "Surgery S2 Tonsillectomy is scheduled on day 3 in room 0\n",
-      "Surgery S3 Tonsillectomy is scheduled on day 7 in room 1\n",
-      "Surgery S4 Tonsillectomy is scheduled on day 2 in room 2\n",
-      "Surgery S5 Tonsillectomy is scheduled on day 5 in room 1\n",
-      "Surgery S7 Tonsillectomy is scheduled on day 2 in room 1\n",
-      "Surgery S9 Tonsillectomy is scheduled on day 3 in room 2\n",
-      "Surgery S10 Tonsillectomy is scheduled on day 6 in room 1\n",
-      "Surgery S11 Tonsillectomy is scheduled on day 7 in room 2\n",
-      "Surgery S12 Tonsillectomy is scheduled on day 4 in room 1\n",
-      "Surgery S15 Tonsillectomy is scheduled on day 5 in room 2\n",
-      "Surgery S16 Tonsillectomy is scheduled on day 6 in room 2\n",
-      "Surgery S17 Tonsillectomy is scheduled on day 3 in room 1\n",
+      "Surgery S1 Tonsillectomy is scheduled on day 1 in room 0\n",
+      "Surgery S2 Tonsillectomy is scheduled on day 8 in room 1\n",
+      "Surgery S4 Tonsillectomy is scheduled on day 3 in room 1\n",
+      "Surgery S5 Tonsillectomy is scheduled on day 7 in room 0\n",
+      "Surgery S6 Tonsillectomy is scheduled on day 8 in room 2\n",
+      "Surgery S7 Tonsillectomy is scheduled on day 1 in room 2\n",
+      "Surgery S8 Tonsillectomy is scheduled on day 7 in room 1\n",
+      "Surgery S10 Tonsillectomy is scheduled on day 3 in room 0\n",
+      "Surgery S12 Tonsillectomy is scheduled on day 4 in room 0\n",
+      "Surgery S13 Tonsillectomy is scheduled on day 4 in room 1\n",
+      "Surgery S14 Tonsillectomy is scheduled on day 7 in room 2\n",
       "Surgery S18 Tonsillectomy is scheduled on day 6 in room 0\n",
-      "Surgery S22 Tonsillectomy is scheduled on day 8 in room 1\n",
-      "Surgery S23 Tonsillectomy is scheduled on day 1 in room 1\n",
-      "Surgery S24 Tonsillectomy is scheduled on day 7 in room 0\n",
-      "Surgery S25 Tonsillectomy is scheduled on day 4 in room 0\n",
-      "Surgery S26 Tonsillectomy is scheduled on day 1 in room 0\n",
-      "Surgery S27 Tonsillectomy is scheduled on day 8 in room 2\n",
-      "Surgery S28 Tonsillectomy is scheduled on day 1 in room 2\n",
-      "Surgery S29 Tonsillectomy is scheduled on day 2 in room 0\n",
-      "Surgery S30 Tonsillectomy is scheduled on day 4 in room 2\n",
-      "Surgery S36 Gastric Bypass is scheduled on day 8 in room 0\n",
+      "Surgery S19 Tonsillectomy is scheduled on day 8 in room 0\n",
+      "Surgery S20 Tonsillectomy is scheduled on day 6 in room 1\n",
+      "Surgery S21 Tonsillectomy is scheduled on day 1 in room 1\n",
+      "Surgery S22 Tonsillectomy is scheduled on day 2 in room 2\n",
+      "Surgery S23 Tonsillectomy is scheduled on day 3 in room 2\n",
+      "Surgery S24 Tonsillectomy is scheduled on day 4 in room 2\n",
+      "Surgery S25 Tonsillectomy is scheduled on day 6 in room 2\n",
+      "Surgery S26 Tonsillectomy is scheduled on day 2 in room 0\n",
+      "Surgery S27 Tonsillectomy is scheduled on day 5 in room 2\n",
+      "Surgery S28 Tonsillectomy is scheduled on day 5 in room 1\n",
+      "Surgery S29 Tonsillectomy is scheduled on day 5 in room 0\n",
+      "Surgery S30 Tonsillectomy is scheduled on day 2 in room 1\n",
       "\n",
       "Scheduled Wait Times:\n",
-      "Scheduled wait time for Surgery S1 Tonsillectomy: 5.0\n",
-      "Scheduled wait time for Surgery S2 Tonsillectomy: 3.0\n",
-      "Scheduled wait time for Surgery S3 Tonsillectomy: 7.0\n",
-      "Scheduled wait time for Surgery S4 Tonsillectomy: 2.0\n",
-      "Scheduled wait time for Surgery S5 Tonsillectomy: 5.0\n",
-      "Scheduled wait time for Surgery S6 Tonsillectomy: 0.0\n",
-      "Scheduled wait time for Surgery S7 Tonsillectomy: 2.0\n",
-      "Scheduled wait time for Surgery S8 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S9 Tonsillectomy: 3.0\n",
-      "Scheduled wait time for Surgery S10 Tonsillectomy: 6.0\n",
-      "Scheduled wait time for Surgery S11 Tonsillectomy: 7.0\n",
+      "Scheduled wait time for Surgery S1 Tonsillectomy: 1.0\n",
+      "Scheduled wait time for Surgery S2 Tonsillectomy: 8.0\n",
+      "Scheduled wait time for Surgery S3 Tonsillectomy: 0.0\n",
+      "Scheduled wait time for Surgery S4 Tonsillectomy: 3.0\n",
+      "Scheduled wait time for Surgery S5 Tonsillectomy: 7.0\n",
+      "Scheduled wait time for Surgery S6 Tonsillectomy: 8.0\n",
+      "Scheduled wait time for Surgery S7 Tonsillectomy: 1.0\n",
+      "Scheduled wait time for Surgery S8 Tonsillectomy: 7.0\n",
+      "Scheduled wait time for Surgery S9 Tonsillectomy: -0.0\n",
+      "Scheduled wait time for Surgery S10 Tonsillectomy: 3.0\n",
+      "Scheduled wait time for Surgery S11 Tonsillectomy: -0.0\n",
       "Scheduled wait time for Surgery S12 Tonsillectomy: 4.0\n",
-      "Scheduled wait time for Surgery S13 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S14 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S15 Tonsillectomy: 5.0\n",
-      "Scheduled wait time for Surgery S16 Tonsillectomy: 6.0\n",
-      "Scheduled wait time for Surgery S17 Tonsillectomy: 3.0\n",
+      "Scheduled wait time for Surgery S13 Tonsillectomy: 4.0\n",
+      "Scheduled wait time for Surgery S14 Tonsillectomy: 7.0\n",
+      "Scheduled wait time for Surgery S15 Tonsillectomy: -0.0\n",
+      "Scheduled wait time for Surgery S16 Tonsillectomy: -0.0\n",
+      "Scheduled wait time for Surgery S17 Tonsillectomy: -0.0\n",
       "Scheduled wait time for Surgery S18 Tonsillectomy: 6.0\n",
-      "Scheduled wait time for Surgery S19 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S20 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S21 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S22 Tonsillectomy: 8.0\n",
-      "Scheduled wait time for Surgery S23 Tonsillectomy: 1.0\n",
-      "Scheduled wait time for Surgery S24 Tonsillectomy: 7.0\n",
-      "Scheduled wait time for Surgery S25 Tonsillectomy: 4.0\n",
-      "Scheduled wait time for Surgery S26 Tonsillectomy: 1.0\n",
-      "Scheduled wait time for Surgery S27 Tonsillectomy: 8.0\n",
-      "Scheduled wait time for Surgery S28 Tonsillectomy: 1.0\n",
-      "Scheduled wait time for Surgery S29 Tonsillectomy: 2.0\n",
-      "Scheduled wait time for Surgery S30 Tonsillectomy: 4.0\n",
+      "Scheduled wait time for Surgery S19 Tonsillectomy: 8.0\n",
+      "Scheduled wait time for Surgery S20 Tonsillectomy: 6.0\n",
+      "Scheduled wait time for Surgery S21 Tonsillectomy: 1.0\n",
+      "Scheduled wait time for Surgery S22 Tonsillectomy: 2.0\n",
+      "Scheduled wait time for Surgery S23 Tonsillectomy: 3.0\n",
+      "Scheduled wait time for Surgery S24 Tonsillectomy: 4.0\n",
+      "Scheduled wait time for Surgery S25 Tonsillectomy: 6.0\n",
+      "Scheduled wait time for Surgery S26 Tonsillectomy: 2.0\n",
+      "Scheduled wait time for Surgery S27 Tonsillectomy: 5.0\n",
+      "Scheduled wait time for Surgery S28 Tonsillectomy: 5.0\n",
+      "Scheduled wait time for Surgery S29 Tonsillectomy: 5.0\n",
+      "Scheduled wait time for Surgery S30 Tonsillectomy: 2.0\n",
       "Scheduled wait time for Surgery S31 ACL Reconstruction: -0.0\n",
       "Scheduled wait time for Surgery S32 ACL Reconstruction: -0.0\n",
       "Scheduled wait time for Surgery S33 ACL Reconstruction: -0.0\n",
       "Scheduled wait time for Surgery S34 Gastric Bypass: -0.0\n",
       "Scheduled wait time for Surgery S35 Gastric Bypass: -0.0\n",
-      "Scheduled wait time for Surgery S36 Gastric Bypass: 8.0\n"
+      "Scheduled wait time for Surgery S36 Gastric Bypass: -0.0\n"
      ]
     }
    ],
