--- a/TargetWaitTime.ipynb
+++ b/TargetWaitTime.ipynb
@@ -106,7 +106,7 @@
     "    model.addConstr(SWT[i] == gp.quicksum(j * X[i, j, k] for j in J for k in K) * (1 + AD[i]),\n",
     "                    name=f\"SWT_Constraint_{i}\")\n",
     "    \n",
-    "# Constraint Define a new binary decision variable to indicate whether SWT[i] > T[i]\n",
+    "# Constraint 4 Define a new binary decision variable to indicate whether SWT[i] > T[i]\n",
     "for i in I:\n",
     "    model.addConstr(SWT[i] - T[i] <= M * Y[i], name=f\"Constraint_SWT_T_{i}\")\n",
     "\n",
