Re-did variables

--- a/Portfolio Generation.ipynb
+++ b/Portfolio Generation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,9 @@
     "    \"Varicose Vein Surgery\": {\"duration\": 1,  \"waiting_time\": 45 }\n",
     "}\n",
     "surgery_counts = {\n",
-    "    \"Tonsillectomy\": 30,\n",
-    "    \"ACL Reconstruction\": 3,\n",
-    "    \"Gastric Bypass\": 3,\n",
+    "    \"Tonsillectomy\": 20,\n",
+    "    \"ACL Reconstruction\": 10,\n",
+    "    \"Gastric Bypass\": 0,\n",
     "    # \"Mastectomy\": 1,\n",
     "    # \"Spinal Fusion\": 1,\n",
     "    # \"Varicose Vein Surgery\": 1\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
     "        if surgery_type in surgeries_info:\n",
     "            for _ in range(count):\n",
     "                surgery = {\n",
-    "                    \"id\": f\"S{surgery_id}\",\n",
+    "                    \"id\": f\"S{surgery_id}_{surgery_type}\",\n",
     "                    \"type\": surgery_type,\n",
     "                    \"duration\": surgeries_info[surgery_type][\"duration\"],\n",
     "                    \"ideal_waiting_time\": surgeries_info[surgery_type][\"waiting_time\"],\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -155,9 +155,9 @@
     "    print(f\"Data saved to {filename}\")\n",
     "    \n",
     "\n",
-    "num_rooms = 3 \n",
-    "num_days = 9\n",
-    "hours_per_day = 1\n",
+    "num_rooms = 1\n",
+    "num_days = 40\n",
+    "hours_per_day = 4\n",
     "\n",
     "room_capacities_df = generate_room_capacities(num_rooms, num_days, hours_per_day,\"OR_caps.csv\")\n",
     "\n"
