--- a/TargetWaitTime.ipynb
+++ b/TargetWaitTime.ipynb
@@ -33,21 +33,23 @@
     "  - $\\sum_{jk} (X_{ijk}) \\leq 1$ for all $i \\in I$\n",
     "- **Constraint 2: Room capacity**\n",
     "  - $C_{jk} \\geq \\sum_{i \\in I} (X_{ijk} \\cdot D_i)$ for all $j$ in $J$, $k$ in $K$\n",
-    "- **Constraint 3: Set $SWT_{i}$**\n",
-    "  - $SWT_{i} = \\sum_{jk} (j \\cdot X_{ijk}) \\cdot (1 + AD_i)$ for all $i \\in I$\n",
-    "- **Constraint 4: Indicator for $SWT_{i} > T_{i}$**\n",
-    "  - $SWT_{i} - T_{i} \\leq M \\cdot Y_{i}$ for all $i \\in I$\n",
-    "- **Constraint 5: Enforce $SWT_{i} > T_{i}$**\n",
-    "  - $SWT_{i} - T_{i} \\leq M \\cdot Y_{i}$ for all $i \\in I$\n",
+    "- **Constraint 3: Set $SWT_{i}$ equal to Day Scheduled + Waited Time** \n",
+    "  - $SWT_{i} \\geq \\sum_{jk} (j + AD_i \\cdot X_{ijk})$ for all $i$ in $I$\n",
+    "\n",
+    "- **Constraint 4: Y Indicator for when $SWT_{i} < T_{i}$**\n",
+    "  - $SWT[i] - T[i] \\leq M \\cdot (1 - Y[i])$ for all $i \\in I$\n",
+    "  - $SWT[i] - T[i] \\geq -M \\cdot Y[i]$ for all $i \\in I$\n",
     "\n",
     "#### Objective Function\n",
     "Define the objective function:\n",
-    "- **Minimize** $\\text{Minimize} \\sum_{i,j,k} \\left( \\text{max}\\left(0, X_{ijk} \\cdot (SWT_i - T_i)\\right) + \\beta \\cdot SWT_i + \\delta \\cdot {penalty\\_unscheduled}\\right) $\n"
+    "- **Minimize** $\\text{Minimize} \\sum_{i,j,k} \\left( \\text{max}\\left(0, X_{ijk} \\cdot (SWT_i - T_i)\\right) + \\beta \\cdot SWT_i + \\delta \\cdot {penalty\\_unscheduled}\\right) $\n",
+    "- **Minimize** $\\text{Minimize} \\sum_{i,j,k} \\left(( Y_i \\cdot X_{ijk} \\cdot (SWT_i - T_i)+ \\beta \\cdot SWT_i + \\delta \\cdot {penalty\\_unscheduled}\\right) $\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,7 @@
     "D = {row['ID']: row['duration'] for _, row in surgicalPortfolio.iterrows()} # \n",
     "T = {row['ID']: row['ideal_waiting_time'] for _, row in surgicalPortfolio.iterrows()}\n",
     "AD = {row['ID']: row['days_waited'] for _, row in surgicalPortfolio.iterrows()}\n",
-    "M = 10**99\n",
+    "M = 999999999999999999999999999999999999999\n",
     "\n",
     "# Variables\n",
     "X = {(i, j, k): model.addVar(vtype=GRB.BINARY, name=f\"X_{i}_{j}_{k}\") for i in I for j in J for k in K}\n",
@@ -101,20 +103,26 @@
     "\n",
     "#Constraints for variables: \n",
     "\n",
-    "# Constraint 3: Add constraint to set SWT[i] equal to the scheduled wait time plus the admitted date\n",
-    "for i in I:\n",
-    "    model.addConstr(SWT[i] == gp.quicksum(j * X[i, j, k] for j in J for k in K) * (1 + AD[i]),\n",
+    "#Constraints for variables:\n",
+    "# Constraint 3: Set SWT[i] equal to the scheduled wait time plus the admitted date\n",
+    "for i in surgeries:\n",
+    "    model.addConstr(SWT[i] == gp.quicksum((j+ AD[i]) * X[i, j, k] for j in days for k in rooms),\n",
     "                    name=f\"SWT_Constraint_{i}\")\n",
-    "    \n",
-    "# Constraint 4 Define a new binary decision variable to indicate whether SWT[i] > T[i]\n",
-    "for i in I:\n",
-    "    model.addConstr(SWT[i] - T[i] <= M * Y[i], name=f\"Constraint_SWT_T_{i}\")\n",
+    "\n",
+    "# Constraint 4: Ensure binary decision variable (Y[i]) respects wether SWT[i] > T[i]\n",
+    "for i in surgeries:\n",
+    "    # model.addConstr(SWT[i] - T[i] <= M * (1 - Y[i]), name=f\"Y_activate_{i}\")\n",
+    "    # model.addConstr(SWT[i] - T[i] >= -M * Y[i], name=f\"Y_deactivate_{i}\")\n",
+    "    model.addConstr(T[i] >= SWT[i] - M * Y[i], name=f\"Y_activate_{i}\")\n",
+    "    model.addConstr(T[i] <= SWT[i] + M * (1-Y[i]), name=f\"Y_deactivate_{i}\")\n",
+    "\n",
+    "\n",
     "\n",
     "# Define the penalty term for surgeries not scheduled at least once\n",
     "penalty_unscheduled = gp.quicksum((1 - gp.quicksum(X[i, j, k] for j in J for k in K)) for i in I)\n",
     "\n",
     "# Define the penalty term for surgeries exceeding target wait time\n",
-    "penalty_term = gp.quicksum((SWT[i] - T[i]) * Y[i] for i in I for j in J for k in K)\n",
+    "penalty_term = gp.quicksum((SWT[i] - T[i]) * Y[i] for i in I)\n",
     "\n",
     "# Define the cost term for each scheduled surgery\n",
     "cost_term = gp.quicksum(SWT[i] for i in I)\n",
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -139,106 +147,77 @@
       "CPU model: 13th Gen Intel(R) Core(TM) i7-1355U, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 10 physical cores, 12 logical processors, using up to 12 threads\n",
       "\n",
-      "Optimize a model with 132 rows, 936 columns and 2700 nonzeros\n",
-      "Model fingerprint: 0x0daddb2f\n",
-      "Model has 36 quadratic objective terms\n",
-      "Variable types: 36 continuous, 900 integer (900 binary)\n",
+      "Optimize a model with 79 rows, 410 columns and 1220 nonzeros\n",
+      "Model fingerprint: 0xed386bc7\n",
+      "Model has 10 quadratic objective terms\n",
+      "Variable types: 10 continuous, 400 integer (400 binary)\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 1e+99]\n",
+      "  Matrix range     [1e+00, 1e+39]\n",
       "  Objective range  [1e-01, 1e+08]\n",
-      "  QObjective range [5e+01, 5e+01]\n",
+      "  QObjective range [2e+00, 2e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 1e+01]\n",
+      "  RHS range        [1e+00, 1e+39]\n",
       "Warning: Model contains large matrix coefficient range\n",
+      "Warning: Model contains large rhs\n",
       "         Consider reformulating model or setting NumericFocus parameter\n",
       "         to avoid numerical issues.\n",
-      "Found heuristic solution: objective 3.600000e+09\n",
-      "Found heuristic solution: objective 3.599998e+09\n",
-      "Presolve removed 6 rows and 6 columns\n",
-      "Presolve time: 0.01s\n",
-      "Presolved: 156 rows, 960 columns, 2778 nonzeros\n",
-      "Variable types: 0 continuous, 960 integer (894 binary)\n",
-      "Found heuristic solution: objective 2.999998e+09\n",
+      "Found heuristic solution: objective 1.000000e+09\n",
+      "Presolve removed 10 rows and 0 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 79 rows, 420 columns, 1230 nonzeros\n",
+      "Variable types: 0 continuous, 420 integer (400 binary)\n",
+      "Found heuristic solution: objective 9.999999e+08\n",
       "\n",
-      "Root relaxation: objective 1.199998e+09, 323 iterations, 0.00 seconds (0.00 work units)\n",
+      "Root relaxation: objective -4.462821e+01, 99 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0 1.2000e+09    0   91 3.0000e+09 1.2000e+09  60.0%     -    0s\n",
-      "H    0     0                    1.300000e+09 1.2000e+09  7.69%     -    0s\n",
-      "H    0     0                    1.200000e+09 1.2000e+09  0.00%     -    0s\n",
+      "     0     0  -44.62821    0   10 1.0000e+09  -44.62821   100%     -    0s\n",
+      "H    0     0                       5.5000000  -44.62821   911%     -    0s\n",
+      "     0     0     cutoff    0         5.50000    5.50000  0.00%     -    0s\n",
       "\n",
-      "Explored 1 nodes (369 simplex iterations) in 0.05 seconds (0.02 work units)\n",
+      "Cutting planes:\n",
+      "  Gomory: 10\n",
+      "  Cover: 5\n",
+      "  MIR: 4\n",
+      "  StrongCG: 10\n",
+      "  Flow cover: 15\n",
+      "  GUB cover: 5\n",
+      "  RLT: 15\n",
+      "  Relax-and-lift: 10\n",
+      "  PSD: 5\n",
+      "\n",
+      "Explored 1 nodes (236 simplex iterations) in 0.05 seconds (0.01 work units)\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
-      "Solution count 5: 1.2e+09 1.3e+09 3e+09 ... 3.6e+09\n",
+      "Solution count 3: 5.5 1e+09 1e+09 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 1.200000430800e+09, best bound 1.199998162800e+09, gap 0.0002%\n",
+      "Best objective 5.500000000000e+00, best bound 5.500000000000e+00, gap 0.0000%\n",
       "Schedule Results:\n",
-      "Surgery S1 Tonsillectomy is scheduled on day 1 in room 0\n",
-      "Surgery S2 Tonsillectomy is scheduled on day 8 in room 1\n",
-      "Surgery S4 Tonsillectomy is scheduled on day 3 in room 1\n",
-      "Surgery S5 Tonsillectomy is scheduled on day 7 in room 0\n",
-      "Surgery S6 Tonsillectomy is scheduled on day 8 in room 2\n",
-      "Surgery S7 Tonsillectomy is scheduled on day 1 in room 2\n",
-      "Surgery S8 Tonsillectomy is scheduled on day 7 in room 1\n",
-      "Surgery S10 Tonsillectomy is scheduled on day 3 in room 0\n",
-      "Surgery S12 Tonsillectomy is scheduled on day 4 in room 0\n",
-      "Surgery S13 Tonsillectomy is scheduled on day 4 in room 1\n",
-      "Surgery S14 Tonsillectomy is scheduled on day 7 in room 2\n",
-      "Surgery S18 Tonsillectomy is scheduled on day 6 in room 0\n",
-      "Surgery S19 Tonsillectomy is scheduled on day 8 in room 0\n",
-      "Surgery S20 Tonsillectomy is scheduled on day 6 in room 1\n",
-      "Surgery S21 Tonsillectomy is scheduled on day 1 in room 1\n",
-      "Surgery S22 Tonsillectomy is scheduled on day 2 in room 2\n",
-      "Surgery S23 Tonsillectomy is scheduled on day 3 in room 2\n",
-      "Surgery S24 Tonsillectomy is scheduled on day 4 in room 2\n",
-      "Surgery S25 Tonsillectomy is scheduled on day 6 in room 2\n",
-      "Surgery S26 Tonsillectomy is scheduled on day 2 in room 0\n",
-      "Surgery S27 Tonsillectomy is scheduled on day 5 in room 2\n",
-      "Surgery S28 Tonsillectomy is scheduled on day 5 in room 1\n",
-      "Surgery S29 Tonsillectomy is scheduled on day 5 in room 0\n",
-      "Surgery S30 Tonsillectomy is scheduled on day 2 in room 1\n",
+      "Surgery S1_Tonsillectomy Tonsillectomy is scheduled on day 10 in room 0\n",
+      "Surgery S2_Tonsillectomy Tonsillectomy is scheduled on day 6 in room 0\n",
+      "Surgery S3_Tonsillectomy Tonsillectomy is scheduled on day 7 in room 0\n",
+      "Surgery S4_Tonsillectomy Tonsillectomy is scheduled on day 8 in room 0\n",
+      "Surgery S5_Tonsillectomy Tonsillectomy is scheduled on day 9 in room 0\n",
+      "Surgery S6_ACL Reconstruction ACL Reconstruction is scheduled on day 1 in room 0\n",
+      "Surgery S7_ACL Reconstruction ACL Reconstruction is scheduled on day 2 in room 0\n",
+      "Surgery S8_ACL Reconstruction ACL Reconstruction is scheduled on day 3 in room 0\n",
+      "Surgery S9_ACL Reconstruction ACL Reconstruction is scheduled on day 5 in room 0\n",
+      "Surgery S10_ACL Reconstruction ACL Reconstruction is scheduled on day 4 in room 0\n",
       "\n",
       "Scheduled Wait Times:\n",
-      "Scheduled wait time for Surgery S1 Tonsillectomy: 1.0\n",
-      "Scheduled wait time for Surgery S2 Tonsillectomy: 8.0\n",
-      "Scheduled wait time for Surgery S3 Tonsillectomy: 0.0\n",
-      "Scheduled wait time for Surgery S4 Tonsillectomy: 3.0\n",
-      "Scheduled wait time for Surgery S5 Tonsillectomy: 7.0\n",
-      "Scheduled wait time for Surgery S6 Tonsillectomy: 8.0\n",
-      "Scheduled wait time for Surgery S7 Tonsillectomy: 1.0\n",
-      "Scheduled wait time for Surgery S8 Tonsillectomy: 7.0\n",
-      "Scheduled wait time for Surgery S9 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S10 Tonsillectomy: 3.0\n",
-      "Scheduled wait time for Surgery S11 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S12 Tonsillectomy: 4.0\n",
-      "Scheduled wait time for Surgery S13 Tonsillectomy: 4.0\n",
-      "Scheduled wait time for Surgery S14 Tonsillectomy: 7.0\n",
-      "Scheduled wait time for Surgery S15 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S16 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S17 Tonsillectomy: -0.0\n",
-      "Scheduled wait time for Surgery S18 Tonsillectomy: 6.0\n",
-      "Scheduled wait time for Surgery S19 Tonsillectomy: 8.0\n",
-      "Scheduled wait time for Surgery S20 Tonsillectomy: 6.0\n",
-      "Scheduled wait time for Surgery S21 Tonsillectomy: 1.0\n",
-      "Scheduled wait time for Surgery S22 Tonsillectomy: 2.0\n",
-      "Scheduled wait time for Surgery S23 Tonsillectomy: 3.0\n",
-      "Scheduled wait time for Surgery S24 Tonsillectomy: 4.0\n",
-      "Scheduled wait time for Surgery S25 Tonsillectomy: 6.0\n",
-      "Scheduled wait time for Surgery S26 Tonsillectomy: 2.0\n",
-      "Scheduled wait time for Surgery S27 Tonsillectomy: 5.0\n",
-      "Scheduled wait time for Surgery S28 Tonsillectomy: 5.0\n",
-      "Scheduled wait time for Surgery S29 Tonsillectomy: 5.0\n",
-      "Scheduled wait time for Surgery S30 Tonsillectomy: 2.0\n",
-      "Scheduled wait time for Surgery S31 ACL Reconstruction: -0.0\n",
-      "Scheduled wait time for Surgery S32 ACL Reconstruction: -0.0\n",
-      "Scheduled wait time for Surgery S33 ACL Reconstruction: -0.0\n",
-      "Scheduled wait time for Surgery S34 Gastric Bypass: -0.0\n",
-      "Scheduled wait time for Surgery S35 Gastric Bypass: -0.0\n",
-      "Scheduled wait time for Surgery S36 Gastric Bypass: -0.0\n"
+      "Scheduled wait time for Surgery S1_Tonsillectomy Tonsillectomy: 10.0\n",
+      "Scheduled wait time for Surgery S2_Tonsillectomy Tonsillectomy: 6.0\n",
+      "Scheduled wait time for Surgery S3_Tonsillectomy Tonsillectomy: 7.0\n",
+      "Scheduled wait time for Surgery S4_Tonsillectomy Tonsillectomy: 8.0\n",
+      "Scheduled wait time for Surgery S5_Tonsillectomy Tonsillectomy: 9.0\n",
+      "Scheduled wait time for Surgery S6_ACL Reconstruction ACL Reconstruction: 1.0\n",
+      "Scheduled wait time for Surgery S7_ACL Reconstruction ACL Reconstruction: 2.0\n",
+      "Scheduled wait time for Surgery S8_ACL Reconstruction ACL Reconstruction: 3.0\n",
+      "Scheduled wait time for Surgery S9_ACL Reconstruction ACL Reconstruction: 5.0\n",
+      "Scheduled wait time for Surgery S10_ACL Reconstruction ACL Reconstruction: 4.0\n"
      ]
     }
    ],
@@ -266,6 +245,42 @@
     "    # Print all constraints\n",
     "    for constr in model.getConstrs():\n",
     "        print(constr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Surgery S1_Tonsillectomy Tonsillectomy: SWT = 10.0, Target Wait Time = 1, Y = 1.0, Penalty Contribution = 9.0\n",
+      "Surgery S2_Tonsillectomy Tonsillectomy: SWT = 6.0, Target Wait Time = 1, Y = 1.0, Penalty Contribution = 5.0\n",
+      "Surgery S3_Tonsillectomy Tonsillectomy: SWT = 7.0, Target Wait Time = 1, Y = 1.0, Penalty Contribution = 6.0\n",
+      "Surgery S4_Tonsillectomy Tonsillectomy: SWT = 8.0, Target Wait Time = 1, Y = 1.0, Penalty Contribution = 7.0\n",
+      "Surgery S5_Tonsillectomy Tonsillectomy: SWT = 9.0, Target Wait Time = 1, Y = 1.0, Penalty Contribution = 8.0\n",
+      "Surgery S6_ACL Reconstruction ACL Reconstruction: SWT = 1.0, Target Wait Time = 10, Y = 1.0, Penalty Contribution = -9.0\n",
+      "Surgery S7_ACL Reconstruction ACL Reconstruction: SWT = 2.0, Target Wait Time = 10, Y = 1.0, Penalty Contribution = -8.0\n",
+      "Surgery S8_ACL Reconstruction ACL Reconstruction: SWT = 3.0, Target Wait Time = 10, Y = 1.0, Penalty Contribution = -7.0\n",
+      "Surgery S9_ACL Reconstruction ACL Reconstruction: SWT = 5.0, Target Wait Time = 10, Y = 1.0, Penalty Contribution = -5.0\n",
+      "Surgery S10_ACL Reconstruction ACL Reconstruction: SWT = 4.0, Target Wait Time = 10, Y = 1.0, Penalty Contribution = -6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "penalty_values = []\n",
+    "\n",
+    "for i in surgeries:\n",
+    "    swt_value = SWT[i].x\n",
+    "    target_wait_time = T[i]\n",
+    "    binary_indicator = Y[i].x\n",
+    "    penalty_contribution = (swt_value - target_wait_time) * binary_indicator\n",
+    "\n",
+    "    penalty_values.append({'Surgery': i, 'SWT': swt_value, 'Target Wait Time': target_wait_time, 'Y Indicator': binary_indicator, 'Penalty Contribution': penalty_contribution})\n",
+    "\n",
+    "    print(f\"Surgery {i}: SWT = {swt_value}, Target Wait Time = {target_wait_time}, Y = {binary_indicator}, Penalty Contribution = {penalty_contribution}\")"
    ]
   }
  ],
